mychart/templates/pg-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      component: postgres
  template:
    metadata:
      labels:
        component: postgres
    spec:
      containers:
        - name: postgres
          image: postgres
          resources:
            requests:
              memory: "512Mi"
              cpu: "500m"  
            limits:
              memory: "1Gi"
              cpu: "1"
          ports:
            - containerPort: 5432
