mychart/templates/elastic-service.yml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
spec:
  type: ClusterIP
  selector:
    component: elasticsearch
  ports:
    - port: 9200
      targetPort: 9200
