mychart/templates/front-service.yml
apiVersion: v1
kind: Service
metadata:
  name: matchid-frontend-service
spec:
  ports:
    - name: http
      targetPort: 80
      port: 80
  selector:
    component: matchid-frontend
